--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Articles listing page</h1>
 
-<table>
+<table cellpadding="2" cellspacing="2">
 <thead>
 <tr>
   <th>Title</th>
@@ -13,10 +13,15 @@
   <tr>
     <td><%= article.title %></td>
     <td><%= article.description %></td>
-    <td><a href="articles/<%= article.id %>">view</a> |
-      <a href="articles/<%= article.id %>/edit">edit</a> 
+    <td><%= link_to 'View', article_path(article) %> |
+      <%= link_to 'Edit', edit_article_path(article) %> |
+      <%= link_to 'Delete', article_path(article), method: :delete %> 
     </td>
   </tr>
 <% end %>
 </tbody>
 </table>
+
+<p>
+  <%= link_to 'Create new article', new_article_path %>
+</p>
